Extract xdebug_strndup into its own file

--- a/package.xml
+++ b/package.xml
@@ -139,6 +139,8 @@ Fri, Oct 04, 2024 - Xdebug 3.4.0beta1
      <file name="var_export_xml.c" role="src" />
      <file name="var_export_xml.h" role="src" />
      <file name="vector.h" role="src" />
+     <file name="xdebug_strndup.c" role="src" />
+     <file name="xdebug_strndup.h" role="src" />
      <file name="xml.c" role="src" />
      <file name="xml.h" role="src" />
     </dir>
